--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "reflect-metadata": "^0.1.13",
