--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "ethers": "^6.8.0",
+    "ethers": "5.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
